@@ -112,15 +112,15 @@ public class CartBookServiceImpl implements CartBookService {
 		cartBookRepository.saveAll(cartBooksToSave);
 
 		return new CreateCartBookListResponse(
-			cartBooksToSave.stream().map(CartBook::getId).collect(Collectors.toList()));
+			cartBooksToSave.stream().map(CartBook::getId).toList());
 	}
 
 	@Override
 	public void deleteCartBook(Long memberId, Long bookId) {
 		Optional<Cart> cart = cartRepository.findByMemberId(memberId);
 		if (cart.isPresent()) {
-			Optional<CartBook> cartBook = cartBookRepository.findByCartIdAndBookIdAndIsExposed(cart.get().getId(),
-				bookId, true);
+			Optional<CartBook> cartBook = cartBookRepository.findByCartIdAndBookIdAndIsExposedTrue(cart.get().getId(),
+				bookId);
 			cartBook.ifPresent(book -> book.updateIsExposed(false));
 		}
 	}
